# 2012-4-4

- immunizations applet shows black when up to date and red otherwise
- adjusted column width of condition dates to allow for more of the condition name to be shown
- remove date label from events > medication refills
- use sentence capitalization from all labels (not including rasterized images)
- patients are now sorted by age, oldest on top in the people picker
- update image assets for providers and simulated applets for almost every patient

# 2012-4-4

- minor ui bug fixes and changes
- sparklines now show unique visible range per-line instead of for the whole graph

# 2012-4-03

- update henry smith user image
- show dots for every point on sparklines, white for in range red for out
- refactor summary view header to reflect new layout
- add new people picker icon

# 2012-4-02

- Fixed timeline issues
- Finished HRSparkLine lib
- Fixed bug in date formatter parsing in timeline

# 2012-4-30

- Started custom sparkline library
- Updated user images
- Updated timeline code

# 2012-4-25

- Updated the default applets and their order for the Smith family
- Version bump to 0.4

# 2012-4-23

- Updated providers images

# 2012-4-20

- Added 1-finger swipe to user image
- Fixed view alignments
- Updated summary view images
- Changes doctors tab to providers
- Updated provider tiles
- Increased font size of vitals normals
- Updated patient image on all views

# 2012-4-19

- Implement new "people picker" view
- Implement name search on people picker view
- Transition "Summary" screen to new people picker view
- Add two-finger swipe left and right on the summary screen to go to previous / next patient respectively
- Show new tiles and associated full screen views on doctors tab

# 2012-4-18

- Fixed normal ranges on blood pressure applet
- Added diastolic values to BP popover table
- Normal range is now checked for systolic values
- Added normal ranges to BMI applet
- Removed old vital applets and added blood pressure and/or BMI to the patients