@@ -84,14 +84,15 @@
 		3B74E5C815547DA200593ECF /* HRRespiratoryRateAppletTile.xib in Resources */ = {isa = PBXBuildFile; fileRef = 3B74E5C715547DA200593ECF /* HRRespiratoryRateAppletTile.xib */; };
 		3B74E5D3155482E700593ECF /* hs-condition-full.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B74E5C9155482E700593ECF /* hs-condition-full.png */; };
 		3B74E5D4155482E700593ECF /* hs-events-full.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B74E5CA155482E700593ECF /* hs-events-full.png */; };
-		3B74E5D5155482E700593ECF /* js-condition_full.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B74E5CB155482E700593ECF /* js-condition_full.png */; };
+		3B74E5D5155482E700593ECF /* js-condition-full.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B74E5CB155482E700593ECF /* js-condition-full.png */; };
 		3B74E5D6155482E700593ECF /* js-events-full.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B74E5CC155482E700593ECF /* js-events-full.png */; };
-		3B74E5D7155482E700593ECF /* ms-condition_full.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B74E5CD155482E700593ECF /* ms-condition_full.png */; };
+		3B74E5D7155482E700593ECF /* ms-condition-full.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B74E5CD155482E700593ECF /* ms-condition-full.png */; };
 		3B74E5D8155482E700593ECF /* ms-events-full.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B74E5CE155482E700593ECF /* ms-events-full.png */; };
-		3B74E5D9155482E700593ECF /* ss-condition_full.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B74E5CF155482E700593ECF /* ss-condition_full.png */; };
+		3B74E5D9155482E700593ECF /* ss-condition-full.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B74E5CF155482E700593ECF /* ss-condition-full.png */; };
 		3B74E5DA155482E700593ECF /* ss-events-full.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B74E5D0155482E700593ECF /* ss-events-full.png */; };
-		3B74E5DB155482E700593ECF /* ts-condition_full.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B74E5D1155482E700593ECF /* ts-condition_full.png */; };
+		3B74E5DB155482E700593ECF /* ts-condition-full.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B74E5D1155482E700593ECF /* ts-condition-full.png */; };
 		3B74E5DC155482E700593ECF /* ts-events-full.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B74E5D2155482E700593ECF /* ts-events-full.png */; };
+		3B74E5DE1554854000593ECF /* ns-synthetic.json in Resources */ = {isa = PBXBuildFile; fileRef = 3B74E5DD1554854000593ECF /* ns-synthetic.json */; };
 		3B77F03A15544F18003C2DBD /* UserImage-Smith-Nancy.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B77F03915544F18003C2DBD /* UserImage-Smith-Nancy.png */; };
 		3B77F03D15545452003C2DBD /* Glaucoma_Overview.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B77F03B15545452003C2DBD /* Glaucoma_Overview.png */; };
 		3B77F03E15545452003C2DBD /* Glaucoma_Summary.png in Resources */ = {isa = PBXBuildFile; fileRef = 3B77F03C15545452003C2DBD /* Glaucoma_Summary.png */; };
@@ -309,14 +310,15 @@
 		3B74E5C715547DA200593ECF /* HRRespiratoryRateAppletTile.xib */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = file.xib; path = HRRespiratoryRateAppletTile.xib; sourceTree = "<group>"; };
 		3B74E5C9155482E700593ECF /* hs-condition-full.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "hs-condition-full.png"; sourceTree = "<group>"; };
 		3B74E5CA155482E700593ECF /* hs-events-full.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "hs-events-full.png"; sourceTree = "<group>"; };
-		3B74E5CB155482E700593ECF /* js-condition_full.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "js-condition_full.png"; sourceTree = "<group>"; };
+		3B74E5CB155482E700593ECF /* js-condition-full.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "js-condition-full.png"; sourceTree = "<group>"; };
 		3B74E5CC155482E700593ECF /* js-events-full.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "js-events-full.png"; sourceTree = "<group>"; };
-		3B74E5CD155482E700593ECF /* ms-condition_full.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "ms-condition_full.png"; sourceTree = "<group>"; };
+		3B74E5CD155482E700593ECF /* ms-condition-full.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "ms-condition-full.png"; sourceTree = "<group>"; };
 		3B74E5CE155482E700593ECF /* ms-events-full.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "ms-events-full.png"; sourceTree = "<group>"; };
-		3B74E5CF155482E700593ECF /* ss-condition_full.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "ss-condition_full.png"; sourceTree = "<group>"; };
+		3B74E5CF155482E700593ECF /* ss-condition-full.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "ss-condition-full.png"; sourceTree = "<group>"; };
 		3B74E5D0155482E700593ECF /* ss-events-full.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "ss-events-full.png"; sourceTree = "<group>"; };
-		3B74E5D1155482E700593ECF /* ts-condition_full.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "ts-condition_full.png"; sourceTree = "<group>"; };
+		3B74E5D1155482E700593ECF /* ts-condition-full.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "ts-condition-full.png"; sourceTree = "<group>"; };
 		3B74E5D2155482E700593ECF /* ts-events-full.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "ts-events-full.png"; sourceTree = "<group>"; };
+		3B74E5DD1554854000593ECF /* ns-synthetic.json */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.json; path = "ns-synthetic.json"; sourceTree = "<group>"; };
 		3B77F03915544F18003C2DBD /* UserImage-Smith-Nancy.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = "UserImage-Smith-Nancy.png"; sourceTree = "<group>"; };
 		3B77F03B15545452003C2DBD /* Glaucoma_Overview.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = Glaucoma_Overview.png; sourceTree = "<group>"; };
 		3B77F03C15545452003C2DBD /* Glaucoma_Summary.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = Glaucoma_Summary.png; sourceTree = "<group>"; };
@@ -629,13 +631,13 @@
 			children = (
 				3B74E5C9155482E700593ECF /* hs-condition-full.png */,
 				3B74E5CA155482E700593ECF /* hs-events-full.png */,
-				3B74E5CB155482E700593ECF /* js-condition_full.png */,
+				3B74E5CB155482E700593ECF /* js-condition-full.png */,
 				3B74E5CC155482E700593ECF /* js-events-full.png */,
-				3B74E5CD155482E700593ECF /* ms-condition_full.png */,
+				3B74E5CD155482E700593ECF /* ms-condition-full.png */,
 				3B74E5CE155482E700593ECF /* ms-events-full.png */,
-				3B74E5CF155482E700593ECF /* ss-condition_full.png */,
+				3B74E5CF155482E700593ECF /* ss-condition-full.png */,
 				3B74E5D0155482E700593ECF /* ss-events-full.png */,
-				3B74E5D1155482E700593ECF /* ts-condition_full.png */,
+				3B74E5D1155482E700593ECF /* ts-condition-full.png */,
 				3B74E5D2155482E700593ECF /* ts-events-full.png */,
 				3B77F03915544F18003C2DBD /* UserImage-Smith-Nancy.png */,
 				3B0977E31552D1F2006392E2 /* UserImage-Smith-Henry.png */,
@@ -649,6 +651,7 @@
 				3B19651F14EEAB970045F827 /* C32-Smith-Tom.html */,
 				9464C5861476BDAE0076B991 /* C32-Smith-Johnny.html */,
 				3B0977E61553199E006392E2 /* ns.json */,
+				3B74E5DD1554854000593ECF /* ns-synthetic.json */,
 				3BE9A42814E42A3800F87B60 /* hs.json */,
 				940C0467152B6ADF00834416 /* hs-synthetic.json */,
 				3BE9A42914E42A3800F87B60 /* js.json */,
@@ -1335,14 +1338,15 @@
 				3B74E5C815547DA200593ECF /* HRRespiratoryRateAppletTile.xib in Resources */,
 				3B74E5D3155482E700593ECF /* hs-condition-full.png in Resources */,
 				3B74E5D4155482E700593ECF /* hs-events-full.png in Resources */,
-				3B74E5D5155482E700593ECF /* js-condition_full.png in Resources */,
+				3B74E5D5155482E700593ECF /* js-condition-full.png in Resources */,
 				3B74E5D6155482E700593ECF /* js-events-full.png in Resources */,
-				3B74E5D7155482E700593ECF /* ms-condition_full.png in Resources */,
+				3B74E5D7155482E700593ECF /* ms-condition-full.png in Resources */,
 				3B74E5D8155482E700593ECF /* ms-events-full.png in Resources */,
-				3B74E5D9155482E700593ECF /* ss-condition_full.png in Resources */,
+				3B74E5D9155482E700593ECF /* ss-condition-full.png in Resources */,
 				3B74E5DA155482E700593ECF /* ss-events-full.png in Resources */,
-				3B74E5DB155482E700593ECF /* ts-condition_full.png in Resources */,
+				3B74E5DB155482E700593ECF /* ts-condition-full.png in Resources */,
 				3B74E5DC155482E700593ECF /* ts-events-full.png in Resources */,
+				3B74E5DE1554854000593ECF /* ns-synthetic.json in Resources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
