@@ -1,0 +1,9 @@
+{
+    "applets": [
+                "org.mitre.hreader.bmi",
+                "org.mitre.hreader.bloodpressure",
+                "org.mitre.hreader.medications",
+                "org.mitre.hreader.placeholder.wakemate",
+                "org.mitre.hreader.placeholder.withings"
+                ]
+}
